@@ -1,3 +1,8 @@
+2002-01-14  Glynn Foster  <glynn.foster@sun.com>
+
+	* Makefile.am: Make dist fixes. Actually these probably don't
+	help at all...it's any excuse to get it to build ;)
+
 2002-01-13  Alexander Larsson  <alla@lysator.liu.se>
 
 	* panel-util.[ch]:
